added the background

--- a/index.html
+++ b/index.html
@@ -2,12 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Click JS</title>
+    <title>Grandpa vs Slime !</title>
 
     <script src="lib/phaser.min.js"></script>
     <script src="src/game.js"></script>
 </head>
 <body>
 
+<div id="game"></div>
+
+<style>
+    body {
+        padding: 0; margin: 0;
+    }
+    #game {
+        margin: auto;
+        display: table;
+    }
+</style>
 </body>
 </html>
